[gd_scene load_steps=5 format=3 uid="uid://qf3f4vfdo4vd"]

[ext_resource type="Script" path="res://Scenes/game_intro.gd" id="1_jgemm"]

[sub_resource type="Animation" id="Animation_gadb4"]
resource_name = "btnContinueModulate"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CenterContainer/VBoxContainer/btnContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5btrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CenterContainer/VBoxContainer/btnContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwd84"]
_data = {
"RESET": SubResource("Animation_5btrf"),
"btnContinueModulate": SubResource("Animation_gadb4")
}

[node name="GameIntro" type="Node2D"]
script = ExtResource("1_jgemm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="lblExposition" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The last left on a dying world, it is now you're time to return home..."

[node name="btnContinue" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xwd84")
}

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/btnContinue" to="." method="_on_btn_continue_pressed"]
